2013-03-06  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_schedule_tasks):
	  - Make extra sure that files are not overlapped with HTTP downloads.

2013-03-06  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (data_cb), (main):
	  - Update example with mixed file/HTTP downloads.

2013-03-06  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_schedule_tasks), (fludownloader_new_task):
	  - Do not allow file:// downloads to be overlapped with HTTP ones, since
	    packets arrive much earlier and therefore out-of-order.

2013-03-05  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.h:
	  - A bit of comments

2013-03-05  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (fludownloader_abort_task):
	* lib/fludownloader.h:
	  - Small change to API to avoid redundant parameter.

2013-03-05  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_report_task_done), (_write_function),
	(_process_curl_messages):
	  - Handle correctly the case where a single call to curl_process() produces
	    data for two tasks.

2013-03-05  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c:
	* lib/fludownloader.h:
	  - Return const gchar to make sure it is not free'd.

2013-03-05  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (done_cb):
	* lib/fludownloader.c: (fludownloader_task_get_url):
	* lib/fludownloader.h:
	  - Add API to report the URL of a task. This is EXPERIMENTAL, as the lock
	    cannot be taken since we might want to call this from the data callback.

2013-03-05  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (data_cb), (done_cb), (main):
	* lib/fludownloader.c: (_write_function), (_process_curl_messages),
	(fludownloader_new_task), (fludownloader_lock),
	(fludownloader_unlock):
	* lib/fludownloader.h:
	  - Add API to report the task that produced a data or done callback.
	  - Add API to lock/unlock the library and allow adding a task without taking